<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
            android:title="Replay Results">
            
            <CheckBoxPreference
       			android:key="replayresults"
                android:title="Replay Results Mode"
                android:summaryOn="Replaying participant videos"
                android:summaryOff="Running the experiment"
                android:defaultValue="false"
                android:persistent="true"
                />
    <ListPreference
            android:key="experimentlanguage"
            android:title="Choose BAT Language"
            android:summary="You can choose any of the eBAT languages."
            android:entries="@array/available_languages"
            android:entryValues="@array/available_languages_codes"
            android:defaultValue="en"  />
            
     </PreferenceCategory>
	<PreferenceCategory
            android:title="Experiment settings">
           
      <!-- 
    public static final String PREFERENCE_NAME = "BilingualAphasiaPrefs";
    public static final String PREFERENCE_PARTICIPANT_ID = "participantId";
    public static final String PREFERENCE_PARTICIPANT_FIRSTNAME = "participantfirstname";
    public static final String PREFERENCE_PARTICIPANT_LASTNAME = "participantlastname";
    public static final String PREFERENCE_PARTICIPANT_STARTTIME = "participantstarttime";
    public static final String PREFERENCE_PARTICIPANT_ENDTIME = "participantendtime";
    public static final String PREFERENCE_EXPERIEMENTER_CODE= "experimenterCode";
    public static final String PREFERENCE_EXPERIMENT_IS_READY= "experimentIsReady"; -->
			
            <EditTextPreference 
				android:title="Participant First Name"
				android:key="participantfirstname"  
				android:summary="" android:dialogTitle="Enter the participant's first name"
				android:defaultValue="Albert"
				android:persistent="true"/>
        
            <EditTextPreference 
				android:title="Participant Last Name"
				android:key="participantlastname"  
				android:summary="" android:dialogTitle="Enter the participant's last name"
				android:defaultValue="Adams"
				android:persistent="true"/>
            <EditTextPreference 
				android:title="Experimenter code"
				android:key="experimenterCode"  
				android:summary="Experimenter who tested participant" android:dialogTitle="Enter your experimenter code"
				android:defaultValue="NN"
				android:persistent="true"/>
				
            <EditTextPreference 
				android:title="Testing Day Number"
				android:key="testingdaynumber"  
				android:summary="The number of the day, eg first = 1, second = 2" android:dialogTitle="Please edit this before the day of testing"
				android:defaultValue="1"
				android:persistent="true"/>
				
            <EditTextPreference 
				android:title="Participant Number in the Testing Day"
				android:key="participantnumberinday"  
				android:summary="The participant number of this day, first participant = 1, second day first participant = 1 also" android:dialogTitle="Please edit this before the day of testing, after that this field is autogenerated"
				android:defaultValue="1"
				android:persistent="true"/>
			<EditTextPreference 
				android:title="Participant ID"
				android:key="participantId"  
				android:summary="Autogenerated: Participant ID ParticiantGroup TestingDay ExperimenterInitials ParticipantNumber ParticipantInitials eg EP01GC01AA" android:dialogTitle="The participant code is auto-generated, you dont need to edit this."
				android:defaultValue="UP00AA00NN"
				android:persistent="true"/>
				
    </PreferenceCategory>
    <PreferenceCategory
            android:title="Resources">
			</PreferenceCategory>
			<PreferenceScreen
                android:title="User Guide"
                android:summary="The user guide explains how to use the Android BAT.">

            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/iLanguage/AndroidBilingualAphasiaTest/blob/master/documentation/UserGuide.doc?raw=true" />
		</PreferenceScreen>
		<PreferenceScreen
                android:title="BAT Scorer"
                android:summary="You can use the BAT Scorer to enter the participant's responses and get a patient profile.">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://ilanguage.github.com/BilingualAphasiaTestScorer/public/view/main.html" />
		</PreferenceScreen>
    <PreferenceCategory
            android:title="@string/preference_about_title">

        <PreferenceScreen
                android:title="@string/preference_visit_site"
                android:summary="@string/preference_visit_site_summary">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.mcgill.ca/linguistics/research/bat" />
		</PreferenceScreen>
		<PreferenceScreen
                android:title="@string/preference_visit_bug_tracker"
                android:summary="@string/preference_visit_bug_tracker_summary">

            <intent android:action="android.intent.action.VIEW"
                    android:data="https://docs.google.com/spreadsheet/viewform?formkey=dGpiRDhreGpmTFBmQ2FUTVVjVlhESHc6MQ" />
		</PreferenceScreen>
	        <PreferenceScreen
	                android:title="@string/preference_about_title"
	                android:summary="@string/preference_about_summary">
	         <intent android:action="android.intent.action.VIEW"
                    android:data="http://ilanguage.ca/about" />
		
	        </PreferenceScreen>
	        <Preference
	                android:title="@string/preference_thanks_title"
	                android:summary="@string/preference_thanks_summary"
	                android:enabled="true"
	                android:selectable="false" />
	                
	        <Preference
	                android:title="@string/preference_licence_title"
	                android:summary="@string/preference_licence_summary"
	                android:enabled="true"
	                android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
